# AgentFinVQA

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  main.js  mkdocs.yml  objects.inv  pyproject.toml  results.md  updates.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: code_checks.yml  docs.yml  integration_tests.yml  publish.yml  unit_tests.yml
api/: index.html
baselines/: fix_zeroshot_scores.py  run_zeroshot.py  run_zeroshot.sh  submit_zeroshot.sh
docs/: api.md  index.md  style.css
markdown/: camera_ready_metrics.md
notebooks/: analysis.ipynb  run_pipeline.ipynb
scripts/: compare_mep_runs.py  repair_meps_v6.py  repair_meps_v7.py  run_batch.py  run_batch.sh  run_finmme_batch.py  run_finmme_batch.sh  run_finmme_fixes_v10.sh  run_finmme_fixes_v8_g3flash.sh  run_finmme_fixes_v9.sh  run_finmme_legend_grounding.sh  submit_eval.sh  submit_pipeline.sh
search/: search_index.json
src/agentfinvqa/: __init__.py
src/agentfinvqa/agents/: __init__.py  planner_agent.py  verifier_agent.py  vision_agent.py
src/agentfinvqa/agents/prompts/: planner.txt  vision.txt
src/agentfinvqa/datasets/: __init__.py  chartqapro_loader.py  finmme_loader.py  image_utils.py
src/agentfinvqa/eval/: __init__.py  dashboard.py  error_taxonomy.py  eval_outputs.py  eval_outputs_batch.py  eval_topk.py  eval_traces.py  judge.py  judge_batch.py  report.py  summarize.py
src/agentfinvqa/langfuse_integration/: client.py  dataset.py  ingest.py  prompts.py  tracing.py
src/agentfinvqa/mep/: schema.py  writer.py
src/agentfinvqa/runner/: run_generate_meps.py
src/agentfinvqa/tools/: __init__.py  color_area_tool.py  legend_grounder_tool.py  ocr_reader_tool.py  verifier_tool.py  vision_qa_tool.py
src/agentfinvqa/utils/: json_strict.py  model_compat.py  openai_compat.py
tests/: conftest.py
tests/agentfinvqa/: __init__.py  test_bar.py  test_color_area_tool.py  test_eval_resolve.py  test_finmme_loader.py  test_foo.py  test_foo_bar.py  test_json_strict.py  test_legend_grounding.py  test_model_compat.py  test_openai_compat.py  test_placeholder.py
user_guide/: index.html
