[project]
name = "agentfinvqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [ {name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
license = "Apache-2.0"
repository = "https://github.com/VectorInstitute/AgentFinVQA"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.7",  # PYSEC-2026-164, CVE-2026-42557
    "matplotlib>=3.10.5",
    "numpy>=2.0",
    "opencv-python-headless>=4.8.0",
    "openai>=2.8.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.5.2",
    "transformers>=4.47.0",
    "langfuse>=4",
    "google-genai>=1.34.0",
    "seaborn>=0.13.2",
    "mypy>=1.19.1",
    "pytest>=9.0.3",  # CVE-2025-71176
    "vllm>=0.22.0",   # CVE-2026-22778, -24779, -27893, -34756, -44222, -47155, PYSEC-2026-144
    "qwen-vl-utils==0.0.14",
    "litellm>=1.84.0",
    "json-repair>=0.25.2",
    # Security lower bounds for transitive dependencies
    "aiohttp>=3.14.0",       # CVE-2026-34993, CVE-2026-47265
    "cryptography>=46.0.7",  # PYSEC-2026-35, PYSEC-2026-36
    "gitpython>=3.1.50",     # CVE-2026-42215, CVE-2026-42284, CVE-2026-44244, GHSA-mv93-w799-cj2w
    "idna>=3.15",            # CVE-2026-45409
    "jupyter-server>=2.18.0",  # PYSEC-2026-67/68/69, CVE-2026-40110
    "mistune>=3.2.1",        # PYSEC-2026-168, CVE-2026-33079
    "nbconvert>=7.17.1",     # CVE-2026-39377, CVE-2026-39378
    "notebook>=7.5.6",       # CVE-2026-40171
    "pillow>=12.2.0",        # PYSEC-2026-165, CVE-2026-40192, -42309, -42310, -42311
    "pyjwt>=2.13.0",         # PYSEC-2026-175, -177, -178, -179
    "pymdown-extensions>=10.21.3",  # CVE-2026-46338
    "python-multipart>=0.0.27",     # CVE-2026-40347, CVE-2026-42561
    "requests>=2.33.0",      # CVE-2026-25645
    "pygments>=2.20.0",      # CVE-2026-4539
    "starlette>=1.3.1",      # CVE-2026-48817, CVE-2026-48818, CVE-2026-54282, CVE-2026-54283
    "tornado>=6.5.6",        # CVE-2026-49854
    "urllib3>=2.7.0",        # PYSEC-2026-141, PYSEC-2026-142
    "xgrammar>=0.1.32",      # CVE-2026-25048
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
agentic-xai-eval = [
    "crewai>=1.6.1",
    "google-genai>=1.67.0",
    "openinference-instrumentation-google-genai>=0.1.0",
    "openinference-instrumentation-openai>=0.1.0",
    "streamlit>=1.55.0",
]
dev = [
    "codecov>=2.1.13",
    "mypy>=1.14.1",
    "nbqa>=1.9.1",
    "pip>=26.1.2",  # CVE-2026-1703, PYSEC-2026-196, CVE-2026-3219, CVE-2026-6357
    "uv>=0.11.15",  # GHSA-pjjw-68hj-v9mw, GHSA-4gg8-gxpx-9rph
    "pip-audit>=2.7.3",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.13.3",
]
docs = [
    "jinja2>=3.1.6", # Pinning version to address vulnerability GHSA-cpwx-vrp4-4pq7
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.15",
    "mkdocstrings>=0.24.1",
    "mkdocstrings-python>=1.10.0",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
]

# Default dependency groups to be installed
[tool.uv]
default-groups = ["dev", "docs"]

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = false
install_types = true
pretty = true
non_interactive = true
allow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
allow_subclassing_any = false
allow_untyped_calls = false
allow_incomplete_defs = false
allow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
implicit_reexport = false
strict_equality = true
extra_checks = true
mypy_path = "src"
cache_dir = "/tmp/mypy_cache_agentfinvqa"

[tool.ruff]
include = ["*.py", "pyproject.toml", "*.ipynb"]
exclude = []
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ICN", # flake8-import-conventions
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "W", # pycodestyle
    "N", # pep8-naming
    "ERA", # eradicate
    "PL", # pylint
]
fixable = ["A", "B", "COM", "C4", "RET", "SIM", "ICN", "Q", "RSE", "D", "E", "F", "I", "W", "N", "ERA", "PL"]
ignore = [
    "B905", # `zip()` without an explicit `strict=` parameter
    "E501", # line too long
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "PLR2004", # Replace magic number with named constant
    "PLR0913", # Too many arguments
    "COM812", # Missing trailing comma
    "ERA001", # Found commented-out code (too many false positives with math comments)
    "A001", # Ignore variable `input` is shadowing a Python builtin (common for torch)
    "A002", # Ignore variable `input` is shadowing a Python builtin in function (common for torch)
    "D301", # r-strings for docstrings with backslashes
]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
# Ignoring undocumented public functions, public init, magic method, and magic numbers in tests folder
"tests/*" = ["D103", "D105", "D107"]
# Notebooks: imports are not at top of file by design (cells), no module docstrings needed
"notebooks/*" = ["E402", "D100", "D103", "D104"]
"*.ipynb" = ["E402", "D100", "D103", "D104"]


[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.pytest.ini_options]
markers = [
    "integration_test: marks tests as integration tests",
]

[[tool.mypy.overrides]]
module = ["crewai.*", "streamlit", "google.genai", "openinference.*", "datasets", "json_repair"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "agentfinvqa.agents.*",
    "agentfinvqa.eval.dashboard",
    "agentfinvqa.eval.judge",
    "agentfinvqa.tools.*",
]
ignore_errors = true

[tool.coverage]
    [tool.coverage.run]
    source=["src/agentfinvqa"]
    omit=["tests/*", "*__init__.py"]
